--- a/package.json
+++ b/package.json
@@ -1,63 +1,32 @@
 {
-	"name": "pkg-name",
-	"version": "0.0.0",
-	"packageManager": "pnpm@10.20.0",
-	"author": "Ray <i@mk1.io> (@so1ve)",
+	"name": "hashi",
+	"packageManager": "pnpm@10.22.0",
 	"type": "module",
-	"description": "",
-	"keywords": [],
-	"homepage": "https://github.com/so1ve/pkg-name#readme",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/so1ve/pkg-name.git"
-	},
-	"bugs": {
-		"url": "https://github.com/so1ve/pkg-name/issues"
-	},
-	"license": "MIT",
-	"sideEffects": false,
-	"exports": {
-		".": "./dist/index.js",
-		"./package.json": "./package.json"
-	},
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"typesVersions": {
-		"*": {
-			"*": [
-				"./dist/*",
-				"./dist/index.d.ts"
-			]
-		}
-	},
-	"files": [
-		"dist"
-	],
-	"publishConfig": {
-		"access": "public"
-	},
 	"scripts": {
-		"build": "tsdown",
+		"build": "vite build",
+		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
+		"deploy": "npm run build && wrangler pages deploy",
+		"dev": "vite",
 		"lint": "eslint . && prettier . --check",
 		"lint:fix": "eslint . --fix && prettier . --write",
-		"prepublishOnly": "nr build",
-		"release": "bumpp --commit --push --tag && pnpm publish",
-		"test": "vitest",
-		"typecheck": "tsgo --noEmit",
-		"watch": "tsdown --watch"
+		"preview": "wrangler pages dev",
+		"typecheck": "tsgo --noEmit"
+	},
+	"dependencies": {
+		"hono": "^4.10.5"
 	},
 	"devDependencies": {
 		"@antfu/ni": "^27.0.1",
+		"@hono/vite-build": "^1.7.0",
+		"@hono/vite-dev-server": "^0.23.0",
 		"@so1ve/eslint-config": "^3.11.2",
 		"@so1ve/prettier-config": "^3.11.2",
-		"@types/node": "^24.9.2",
+		"@types/node": "^24.10.1",
 		"@typescript/native-preview": "7.0.0-dev.20251029.1",
-		"bumpp": "^10.3.1",
-		"eslint": "^9.38.0",
+		"eslint": "^9.39.1",
 		"prettier": "^3.6.2",
-		"tsdown": "^0.15.11",
 		"typescript": "^5.9.3",
-		"vite": "^7.1.12",
-		"vitest": "^4.0.5"
+		"vite": "^7.2.2",
+		"wrangler": "^4.48.0"
 	}
 }
