--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"deno.enablePaths": [
+		"./"
+	],
+	"editor.inlayHints.enabled": "off",
+	"deno.enable": true,
+	"typescript.tsserver.experimental.enableProjectDiagnostics": false,
+	"[json]": {
+		"editor.defaultFormatter": "denoland.vscode-deno"
+	}
 }
