--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-	"deno.enablePaths": [
-		"./"
-	],
-	"editor.inlayHints.enabled": "off",
-	"deno.enable": true,
-	"typescript.tsserver.experimental.enableProjectDiagnostics": false,
-	"editor.defaultFormatter": "denoland.vscode-deno"
+	"typescript.tsdk": "node_modules\\typescript\\lib"
 }
