feat: basic functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "ESNext",
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx",
-		"lib": ["ESNext"],
+		"lib": ["ESNext", "DOM"],
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
 		"types": ["vite/client", "./worker-configuration.d.ts"],
