--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
 		"@cloudflare/vite-plugin": "^1.2.3",
 		"@grammyjs/auto-retry": "^2.0.2",
 		"@grammyjs/hydrate": "^1.6.0",
-		"@so1ve/eslint-config": "^3.11.3",
-		"@so1ve/prettier-config": "^3.11.3",
+		"@grammyjs/parse-mode": "^2.2.0",
+		"@roziscoding/grammy-autoquote": "^2.0.9",
+		"@so1ve/eslint-config": "^3.11.4",
+		"@so1ve/prettier-config": "^3.11.4",
 		"@types/node": "^24.10.1",
 		"@typescript/native-preview": "7.0.0-dev.20251113.1",
+		"abort-controller": "^3.0.0",
 		"cloudflared": "^0.7.1",
 		"eslint": "^9.39.1",
 		"grammy": "^1.38.3",
@@ -32,6 +35,7 @@
 		"quick-lru": "^7.3.0",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.2",
+		"vite-ssr-components": "^0.5.1",
 		"wrangler": "^4.17.0"
 	}
 }
