--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "hashi"
 compatibility_date = "2025-08-03"
-main = "./src/index.ts"
+main = "./src/index.tsx"
 compatibility_flags = ["nodejs_compat"]
 
 [observability]
