--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
 		"deploy": "pnpm run build && wrangler deploy",
 		"dev": "vite",
-		"postinstall": "pnpm cf-typegen",
+		"postinstall": "pnpm cf-typegen && pnpm prettier --write worker-configuration.d.ts",
 		"lint": "eslint . && prettier . --check",
 		"lint:fix": "eslint . --fix && prettier . --write",
 		"preview": "pnpm run build && vite preview",
@@ -37,7 +37,6 @@
 		"quick-lru": "^7.3.0",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.2",
-		"vite-ssr-components": "^0.5.1",
 		"wrangler": "^4.17.0"
 	}
 }
