--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.2.3",
+		"@grammyjs/auto-retry": "^2.0.2",
 		"@grammyjs/hydrate": "^1.6.0",
 		"@grammyjs/menu": "^1.3.1",
 		"@grammyjs/parse-mode": "^2.2.0",
